
	* data/mirrors (mirror_gnome):
	Remove download.gnome.org, as it just redirects to ftp.gnome.org.

	* Add CVS Id keywords.

	* lib/gstreamer.cygclass,
	  lib/gst-plugins0.8.cygclass,
	  lib/gst-plugins0.10.cygclass:
	Define GST_PLUGINDIR.
	Accept GST_PLUGINS_EXT for building separate external plugins together 
	    with base plugins.
	Separate possible, impossible (i.e. Linux-specific) and configure test
	    module options.

	* bin/cygport.in (pkg_binpkg):
	Accept PKG_LISTS variable to define .list names; defaults to PKG_NAMES.

	* bin/cygport.in (pkg_diff):
	Exclude mdate-sh from the .src.patch.

	* test/bootstrap, test/messages:
	Allow test execution when called by cygport.

	* CYGWIN-PATCHES/README, TODO, lib/Makefile.am (cygclass_DATA),
	  lib/cross.cygclass:
	New cygclass for creating and using cross-compilers.

	* lib/ruby.cygclass (RUBY_ARCH):
	Define as archdir, not arch.

	* CYGWIN-PATCHES/README, configure.ac:
	Post-release version bump.

*** 0.2.6 ***

	* data/mirrors [mirror_gnome]:  Add download.gnome.org.

	* bin/cygport.in (__list_deps):
	Fix dependency listing.
	Patch proposed by Eric Blake /ml/cygwin/2006-10/msg00852.html

	* bin/cygport.in (cygautoreconf),
	  lib/gnome2.cygclass (gnome2_autoreconf):
	Fix support for AC_CONFIG_HEADERS([config.h:config.hin]).

	* lib/pygtk.cygclass:
	Support pycairo.

	* bin/prep_gtk2_modules.sh:
	Set GTK_API based on built gtk+-2.0 instead of system's.
	Fixes built of gtk+-2.10 when 2.8 is installed.

	* bin/cygport.in (cygautoreconf),
	  lib/gnome2.cygclass (gnome2_autoreconf):
	Support AC_CONFIG_HEADERS([config.h:config.hin]) syntax.
	Patch proposed by Eric Blake /ml/cygwin/2006-10/msg00786.html

	* lib/svn.cygclass (svn_fetch):
	Allow for SVN_MODULE != ${SVN_URI##*/}; fixes netpbm build.

	* lib/kde3.cygclass (kde3_install):
	Always install application subdir documentation.

	* lib/gnome2.cygclass (gnome2_autoreconf):
	Call aclocal --force with 1.10 as well.

	* CYGWIN-PATCHES/README, configure.ac: